--- a/index.html
+++ b/index.html
@@ -11,66 +11,76 @@
       background-color: #111;
       color: #fff;
       text-align: center;
-      position: relative;
       overflow-x: hidden;
     }
     header {
-      padding: 60px 20px 30px;
+      padding: 20px 10px;
       background-color: #0aa4db;
       position: relative;
     }
     header img {
-      max-width: 200px;
+      max-width: 140px;
     }
     header h1 {
-      margin-top: 20px;
-      font-size: 2em;
+      margin-top: 10px;
+      font-size: 1.4em;
       color: #fff;
-      letter-spacing: 1px;
     }
     .watermark {
       position: absolute;
-      bottom: 10px;
-      right: 20px;
-      font-size: 4em;
+      bottom: 5px;
+      right: 10px;
+      font-size: 2.8em;
       color: rgba(255, 255, 255, 0.05);
       pointer-events: none;
       user-select: none;
       font-weight: bold;
     }
     .directions {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      display: flex;
+      flex-direction: column;
       gap: 20px;
-      padding: 40px 20px;
+      padding: 20px 10px 40px;
     }
     .direction {
       background-color: #222;
-      padding: 30px;
-      border-radius: 12px;
+      padding: 20px;
+      border-radius: 14px;
+      transition: 0.3s;
       cursor: pointer;
-      transition: transform 0.2s, background-color 0.3s;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
     .direction:hover {
-      transform: translateY(-5px);
       background-color: #0aa4db;
     }
     .direction img {
-      max-width: 100px;
+      max-width: 150px;
       margin-bottom: 10px;
     }
     .direction h2 {
-      font-size: 1.2em;
-      margin-bottom: 10px;
+      font-size: 1.5em;
+      margin-bottom: 8px;
     }
     .direction p {
-      font-size: 0.9em;
+      font-size: 1em;
       color: #ccc;
     }
     footer {
-      padding: 20px;
+      padding: 15px;
       font-size: 0.8em;
       color: #666;
+    }
+    @media(min-width: 768px) {
+      .directions {
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+      }
+      .direction {
+        width: 250px;
+      }
     }
   </style>
 </head>
@@ -90,12 +100,12 @@
     <div class="direction" onclick="location.href='laser.html'">
       <img src="laser-icon.png" alt="CO2 Лазер" />
       <h2>CO2 Лазер</h2>
-      <p>Резка и гравировка неметаллов: фанера, акрил, кожа</p>
+      <p>Резка и гравировка неметаллов</p>
     </div>
     <div class="direction" onclick="location.href='marker.html'">
       <img src="marker-icon.png" alt="Лазерный маркер" />
       <h2>Лазерный маркер</h2>
-      <p>Гравировка по металлу: анод, нерж, латунь и др.</p>
+      <p>Гравировка по металлам и анодам</p>
     </div>
   </section>
 
